; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/regtests/gdi/extr_xlate.c_GetClosestColor.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/regtests/gdi/extr_xlate.c_GetClosestColor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BMF_1BPP = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64, i64, i64)* @GetClosestColor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @GetClosestColor(i64 %0, i64 %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store i64 %0, i64* %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  %8 = load i64, i64* %5, align 8
  %9 = load i64, i64* @BMF_1BPP, align 8
  %10 = icmp eq i64 %8, %9
  br i1 %10, label %11, label %13

11:                                               ; preds = %3
  %12 = load i64, i64* %7, align 8
  store i64 %12, i64* %4, align 8
  br label %19

13:                                               ; preds = %3
  %14 = load i64, i64* %5, align 8
  %15 = load i64, i64* %5, align 8
  %16 = load i64, i64* %6, align 8
  %17 = call i32 @iXlateFromRGB(i64 %15, i64 %16)
  %18 = call i64 @iXlateToRGB(i64 %14, i32 %17)
  store i64 %18, i64* %4, align 8
  br label %19

19:                                               ; preds = %13, %11
  %20 = load i64, i64* %4, align 8
  ret i64 %20
}

declare dso_local i64 @iXlateToRGB(i64, i32) #1

declare dso_local i32 @iXlateFromRGB(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
